- Corrected the faulty CSS that made the timeline invisible and probably other CSS working incorrectly or not working at all

--- a/TheSocialOS/war/TheSocialOS.css
+++ b/TheSocialOS/war/TheSocialOS.css
@@ -36,7 +36,7 @@
 }
 
 /** Example rules used by the template application (remove for your app) */
-h1 {
+.h1 {
 	font-size: 2em;
 	font-weight: bold;
 	color: #777777;
@@ -99,7 +99,7 @@ h1 {
 	opacity: 0.3;
 }
 
-desktopbar {
+.desktopbar {
 	border: 1px solid;
 	background-color: lightgray;
 }
@@ -393,7 +393,7 @@ desktopbar {
 	background: #F1F1F1;
 
 }
-. sos-Window .resize:hover{
+.sos-Window .resize:hover{
 }
 
 
@@ -406,7 +406,7 @@ desktopbar {
 	background: white;
 	/*border-bottom-left-radius: 4px;
 	border-bottom-right-radius: 4px;*/
-
+}
 .sos-Window .dialogBottomCenter {
 	background: url(/thesocialos/gwt/cleano/images/hborder.png) repeat-x
 		0px -2945px;
@@ -495,7 +495,7 @@ desktopbar {
 	cursor:pointer;
 	cursor:se-resize;
 }
-center-label {
+.center-label {
 	vertical-align: bottom;
 	text-align: center;
 }
